--- a/study_code/d_project_01/css/src/menu.css
+++ b/study_code/d_project_01/css/src/menu.css
@@ -25,6 +25,20 @@ h1 { width: 120px; height: 70px; background-color: #fff; }
 
 .menu_content ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
-.menu_content li { width: 240px; height: 350px; background-color: #fff; border: 1px solid #333; margin-bottom: 20px; }
+.menu_content li { width: 240px; height: 350px; background-color: #fff; margin-bottom: 20px; }
+
+.menu_content li > a { display: block; width: 100%; height: 100%; padding: 10px; -webkit-box-sizing: border-box; box-sizing: border-box; border: 1px solid #333; border-radius: 3px; }
+
+.thumbnail { width: 100%; height: 220px; margin-bottom: 5px; border-radius: 3px; background-color: #a77; }
+
+.menu_thum { width: 100%; height: auto; }
+
+.menu_thum > dt { width: 100%; height: auto; margin-bottom: 5px; border-bottom: 1px solid #757575; font-size: 22px; font-weight: 700; color: #333; text-transform: capitalize; }
+
+.menu_thum > dd { width: 100%; height: auto; font-size: 12px; font-weight: 400; color: #757575; }
+
+.tag { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 22px; text-transform: uppercase; }
+
+.tag > span { border: 1px solid #757575; border-radius: 3px; }
 
 #footBox { width: 100%; height: 450px; background-color: #555; }
