--- a/study_code/d_project_01/scss/src/menu.scss
+++ b/study_code/d_project_01/scss/src/menu.scss
@@ -1,15 +1,13 @@
 @charset "UTF-8";
 // menu.scss
 /* menu.css */
-
-
 @import "../common/variable", "../common/mixin";
-// @mixin --------------------------
 
-// design --------------------------
+// design -------------------------- 
 .container { width: 1100px; height: 100%; margin:auto;}
-// ---------------
+// --------------- 
 #wrap { width: 1440px; height:auto; margin:auto;}
+
   @import "../dist/headBox";
   @import "../dist/contentBox";
-  @import "../dist/_footBox.scss";
+  @import "../dist/footBox";
