--- a/study_code/b_step_04/css/src/b_01_scss_basic.css
+++ b/study_code/b_step_04/css/src/b_01_scss_basic.css
@@ -1,35 +1,17 @@
-/* b_01_scss_basic.css */
-:root {
-  --color-gray:#777;
-}
+/* Error: Undefined operation "#999 + #fa0".
+ *    ,
+ * 20 |   background-color:rgba($gray + #fa0, 0.5);
+ *    |                         ^^^^^^^^^^^^
+ *    '
+ *   scss\src\b_01_scss_basic.scss 20:25  root stylesheet */
 
-#wrap {
-  color: var(--color-gray);
-  background-color: rgba(255, 255, 153, 0.5);
-  border: 1px solid #b3b3b3;
-  outline: 1px solid #999;
-}
-
-#navBox {
-  width: 100%;
-  height: 100%;
-  min-width: 90px;
-  min-height: 100px;
-}
-
-#navBox > ul {
-  width: 100%;
-  height: 100%;
-  min-width: 90px;
-  min-height: 100px;
-}
-
-#navBox li {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-#navBox li:last-child {
-  margin-bottom: 0;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: Undefined operation "#999 + #fa0".\a    \2577 \a 20 \2502    background-color:rgba($gray + #fa0, 0.5);\d\a    \2502                          ^^^^^^^^^^^^\a    \2575 \a   scss\\src\\b_01_scss_basic.scss 20:25  root stylesheet';
 }
