--- a/study_code/b_step_04/css/src/test.css
+++ b/study_code/b_step_04/css/src/test.css
@@ -1,1 +1,1 @@
-#wrap{width:100%}/*# sourceMappingURL=test.css.map */
+#wrap{width:100%}#headBox{width:100%;height:100%;background-color:#afc}/*# sourceMappingURL=test.css.map */
