--- a/study_code/b_step_04/scss/src/b_03_scss_mixin_function.scss
+++ b/study_code/b_step_04/scss/src/b_03_scss_mixin_function.scss
@@ -12,5 +12,11 @@
 
 
 p{
-  @include px(width, 100)
+  @include unit(width, 100);
+  height: rem(50);
+}
+
+$device: 360;
+.div1 {
+  width: vw(40);
 }
