--- a/study_code/b_step_04/scss/_common/_mixin.scss
+++ b/study_code/b_step_04/scss/_common/_mixin.scss
@@ -4,7 +4,7 @@ $url: "../../img/";
 $baseSize: 16;
 
 @mixin bgImg($i, $r:no-repeat, $p:50% 50%, $z:initial) {
-  background : {
+  background : { 
     image: url(#{$url}#{$i});
     repeat: $r;
     position: $p;
@@ -17,7 +17,16 @@ $baseSize: 16;
   @content;
 }
 
-@mixin px($s, $u){
+@function rem($u){
+  @return ($u/$baseSize) + rem;
+}
+
+@mixin unit($s, $u){
   #{$s}:#{$u}px;
-  #{$s}:#{$u/$baseSize}rem;
+  #{$s}:rem($u);
+}
+
+$device: 360;
+@function vw($u, $d:$device){
+  @return ($u/$d*100)+vw;
 }
