--- a/study_code/d_project_01_v2/css/src/main.css
+++ b/study_code/d_project_01_v2/css/src/main.css
@@ -1,6 +1,10 @@
 /* main.css */
-body {
-  background-color: #f8f;
-}
+#wrap { width: 100%; height: 500px; }
 
-/*# sourceMappingURL=main.css.map */
+#headBox { width: 100%; }
+
+@media all and (max-width: 590px) { #wrap { min-width: 320px; height: 400px; }
+  #headBox { width: 90%; } }
+
+@media all and (min-width: 600px) and (max-width: 1023px) { #wrap { min-width: 600px; height: 700px; }
+  #headBox { width: 95%; } }
