--- a/study_code/d_project_01_v2/scss/src/main.scss
+++ b/study_code/d_project_01_v2/scss/src/main.scss
@@ -4,32 +4,30 @@
 @import "../common/variable";
 @import "../common/mixin";
 // --------------------------------
-  $headH:50px;
+  $headH:0;
+  $headH2:0;
 // --------------------------------
 
 #wrap {
   width:100%;  
   height:auto; min-height:800px;
   background-color: #ddd;
-
-  @include mobile{
-    min-width:320px;
-    background-color: #fda;
-  }
+  @include mobile{ min-width:320px;  background-color: #fda; }
   @include tablet{ background-color: #adf;  }
   @include laptop{ background-color: #fdf;  }
   @include pc{ background-color: #dfd; }
-  
-  @import "../page/common/headBox";
+}// #wrap
+
+// -------------------------------------------
+  @import "../page/base/headBox";
+
   @import "../page/main/slideBox";
-}
+  @import "../page/main/newBox";
 
+  // @import "../page/main/commercialBox";
+  // @import "../page/main/bestBox";
+  // @import "../page/main/galleryBox";
+  // @import "../page/main/sponsorBox";
 
-
-
-  // #newBox {}
-  // #commercialBox {}
-  // #bestBox {}
-  // #galleryBox {}
-  // #sponsorBox {}
-  // #footBox {}
+  // @import "../page/base/footBox";
+// -------------------------------------------
