--- a/study_code/d_project_01_v2/css/src/main.css
+++ b/study_code/d_project_01_v2/css/src/main.css
@@ -33,9 +33,36 @@
   left: 0;
   z-index: 1000;
   width: 100%;
-  height: 50;
+  height: 50px;
+  height: 3.125rem;
   background-color: #fff;
 }
+h1 {
+  width: 60px;
+  height: 35px;
+  background-color: #fff;
+}
+@media all and (max-width: 590px) {
+  h1 {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 8px;
+    margin: auto;
+    background-color: #dfa;
+  }
+  .head_area {
+    padding: 0;
+  }
+}
+
+.navi_inner {
+  width: 30px;
+  height: 35px;
+  float: left;
+  background-color: #1a5d54;
+}
+
 @media all and (min-width: 600px) and (max-width: 1023px) {
   #headBox {
     height: 50px;
@@ -108,6 +135,116 @@
 @media all and (min-width: 1440px) {
   #newBox {
     height: 700px;
+  }
+}
+
+#commercialBox {
+  width: 100%;
+  height: 580px;
+  background-color: #ffbd55;
+}
+@media all and (min-width: 1024px) and (max-width: 1439px) {
+  #commercialBox {
+    height: 350px;
+  }
+}
+@media all and (min-width: 1440px) {
+  #commercialBox {
+    height: 350px;
+  }
+}
+
+#bestBox {
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+}
+@media all and (max-width: 590px) {
+  #bestBox {
+    min-height: 1500px;
+  }
+}
+@media all and (min-width: 600px) and (max-width: 1023px) {
+  #bestBox {
+    min-height: 1200px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1439px) {
+  #bestBox {
+    height: 700px;
+  }
+}
+@media all and (min-width: 1440px) {
+  #bestBox {
+    height: 700px;
+  }
+}
+
+#galleryBox {
+  width: 100%;
+  height: auto;
+  background-color: #f7e9d3;
+}
+@media all and (max-width: 590px) {
+  #galleryBox {
+    min-height: 970px;
+  }
+}
+@media all and (min-width: 600px) and (max-width: 1023px) {
+  #galleryBox {
+    min-height: 970px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1439px) {
+  #galleryBox {
+    height: 750px;
+  }
+}
+@media all and (min-width: 1440px) {
+  #galleryBox {
+    height: 750px;
+  }
+}
+
+#sponsorBox {
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+}
+@media all and (max-width: 590px) {
+  #sponsorBox {
+    height: 400px;
+  }
+}
+@media all and (min-width: 600px) and (max-width: 1023px) {
+  #sponsorBox {
+    height: 300px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1439px) {
+  #sponsorBox {
+    height: 100px;
+  }
+}
+@media all and (min-width: 1440px) {
+  #sponsorBox {
+    height: 100px;
+  }
+}
+
+#footBox {
+  width: 100%;
+  height: 450px;
+  background-color: #333333;
+}
+@media all and (max-width: 590px) {
+  #footBox {
+    height: 435px;
+  }
+}
+@media all and (min-width: 600px) and (max-width: 1023px) {
+  #footBox {
+    height: 425px;
   }
 }
 
