--- a/study_code/d_project_01_v2/scss/common/_mixin.scss
+++ b/study_code/d_project_01_v2/scss/common/_mixin.scss
@@ -1,4 +1,5 @@
 // mixin.scss
+@use "sass:math";
 
 // font-set
 @mixin font_set (){
@@ -19,16 +20,39 @@
 }
 
 // image
+$imgPath:'../img/';
 
+@mixin img($file, $repeat:no-repeat, $position:50% 50%, $size:initial){
+  background: {
+    image: url(#{$imgPath}#{$file});
+    repeat: $repeat;
+    position:$position;
+    size: $size;
+  } 
+  & > span{
+    display: block; 
+    position: absolute; z-index:-1; clip:rect(0 0 0 0);
+    width: 0; height: 0; overflow: hidden;
+  }
+  @content;
+}
 
 // size 
-$baseSize: 16;
+@mixin full($file:false, $repeat:no-repeat, $position:50% 50%, $size:initial){
+  display:block; width:100%; height:100%;
+  
+  @if ($file) {
+    @include img($file, $repeat, $position, $size){      @content;    }
+  }
+}
 
 // unit
+$baseSize: 16;
 @mixin remUnit($name, $unit){
   #{$name}: #{$unit} + px;
-  #{$name}: #{$unit / $baseSize} + rem;
+  #{$name}: math.div($unit , $baseSize) + rem;
 }
+
 
 // @media query --------------------------------------
 $mobile : 320px;
@@ -39,7 +63,7 @@ $pc:1440px;
 
 
 @mixin mobile(){
-  @media all and (max-width: #{$tablet - 10}){
+  @media all and (max-width: #{$tablet - 1}){
     @content;
   }
 }
@@ -61,3 +85,6 @@ $pc:1440px;
     @content;
   }
 }
+
+
+
