--- a/study_code/b_step_03/scss/src/c_04_dom_blind_btn.scss
+++ b/study_code/b_step_03/scss/src/c_04_dom_blind_btn.scss
@@ -21,7 +21,9 @@
     }
   } // .btn
 
-  > .content_area { width: 100%; height: 350px; 
+  > .content_area { 
+    overflow-y: hidden;
+    width: 100%; height: 350px; 
     > ul { width: 100%; height: 100%; padding: 1rem; border-radius: 0.25rem; background-color: #fdd;}
   }
 } // #contentBox
