--- a/study_code/b_step_03/css/src/c_04_dom_blind_btn.css
+++ b/study_code/b_step_03/css/src/c_04_dom_blind_btn.css
@@ -43,13 +43,14 @@
   overflow-y: hidden;
   width: 100%;
   height: 350px;
+  background-color: #fdd;
+  transition: background-color 500ms ease;
 }
 #contentBox > .content_area > ul {
   width: 100%;
   height: 100%;
   padding: 1rem;
   border-radius: 0.25rem;
-  background-color: #fdd;
 }
 
 /*# sourceMappingURL=c_04_dom_blind_btn.css.map */
