--- a/study_code/b_step_03/scss/common/_mixin.scss
+++ b/study_code/b_step_03/scss/common/_mixin.scss
@@ -53,11 +53,10 @@ $baseSize: 16;
   #{$name}: math.div($unit , $baseSize) + rem;
 }
 
-// $deviceBase : 400px;
-// @function makeVw ($size, $deviceWidth: $deviceBase) {
-//   return $size / $deviceWidth * 100;
-// }
-
+$deviceBase : 400px;
+@function makeVw($size, $deviceWidth:$deviceBase){
+    @return (math.div($size,$deviceWidth) * 100) + vw;
+}
 
 // @media query --------------------------------------
 $mobile : 320px;
@@ -79,7 +78,7 @@ $pc:1440px;
   }
 }
 
-@mixin handhelds {
+@mixin handhelds(){
   @media all and (max-width:#{$laptop - 1}) {
     @content; 
   }
