2시 30분~4시 수업시간 진도

--- a/study_code/b_step_03/scss/common/_mixin.scss
+++ b/study_code/b_step_03/scss/common/_mixin.scss
@@ -46,6 +46,16 @@ $imgPath:'../img/';
   }
 }
 
+// blind
+@mixin blind(){
+  display: block; width: 0; height: 0;
+  position: absolute; z-index:-1;
+  clip:rect(0,0,0,0);
+  overflow: hidden;
+}
+
+
+
 // unit
 $baseSize: 16;
 @mixin remUnit($name, $unit){
@@ -53,9 +63,9 @@ $baseSize: 16;
   #{$name}: math.div($unit , $baseSize) + rem;
 }
 
-$deviceBase : 400px;
+$deviceBase : 400;
 @function makeVw($size, $deviceWidth:$deviceBase){
-    @return (math.div($size,$deviceWidth) * 100) + vw;
+    @return ( math.div($size,$deviceWidth) * 100 ) + vw;
 }
 
 // @media query --------------------------------------
