--- a/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
+++ b/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
@@ -17,7 +17,6 @@
   width: 100%;
   height: auto;
   min-height: 37.5rem;
-  background-color: #eef;
 }
 
 .width_full {
@@ -43,6 +42,83 @@
 }
 .title_area > p {
   font-size: 1.125rem;
+}
+
+.event_area {
+  width: 58.75rem;
+  height: auto;
+  min-height: 400px;
+  margin: auto;
+  margin-bottom: 100px;
+  padding-bottom: 160px;
+}
+.title_inner {
+  width: 100%;
+  height: 3.25rem;
+  margin-bottom: 3.125rem;
+  padding: 0.5rem;
+}
+.title_inner ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.title_inner li {
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+  color: #757575;
+  font-size: 22px;
+}
+.title_inner button {
+  width: auto;
+  height: 100%;
+  padding: 0 0.5rem;
+  color: inherit;
+}
+.title_inner li.on button {
+  border-bottom: 2px solid #1a5d54;
+  color: #1a5d54;
+  font-weight: 700;
+  font-size: 28px;
+}
+
+.content_inner {
+  width: 100%;
+  height: auto;
+}
+
+.event_area .year_part {
+  display: none;
+}
+.event_area .year_part.on {
+  display: block;
+}
+.event_area .year_part > h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #757575;
+  border-bottom: 1px solid #757575;
+}
+.event_area .event_particle {
+  width: 100%;
+  height: auto;
+}
+.event_area .event_particle > li {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+  height: 12.5rem;
+  margin-bottom: 1.875rem;
+  border-radius: 0.5rem;
+  padding-top: 45px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 36px;
+  background-color: #da9;
 }
 
 #footBox {
