--- a/study_code/b_step_03/scss/common/_variable.scss
+++ b/study_code/b_step_03/scss/common/_variable.scss
@@ -10,14 +10,15 @@ $color_deep_gray: #505050;
 $color_black_01: #333333;
 $color_black_02: #171717;
 $color_white: #ffffff;
-$color_gray_op: rgba(85,85,85,0.3);
+$color_gray_op: rgba(85,85,85,0.1);
 $color_yellow_01: #ffbd55;
 $color_yellow_02: #f7e9d3;
 $color_white_02: #efefef;
 // ================================
-// border
+// border 
 $line1 : 1px solid $color_light_gray_03;
 $line2 : 1px solid $color_primary_01;
+$line3 : 2px solid $color_primary_01;
 
 // font ===========================
 $font_family_en:"apple GD", "noto sans KR";
