--- a/study_code/b_step_03/scss/src/c_10_dom_tab_menu2.scss
+++ b/study_code/b_step_03/scss/src/c_10_dom_tab_menu2.scss
@@ -60,12 +60,14 @@
   }
   .event_particle { width: 100%; height: auto;
     & > li {
+      position: relative;
       display: flex; flex-direction: column; justify-content: flex-end;
       width: 100%; height: 12.5rem; margin-bottom: 1.875rem;
       border-radius:0.5rem; 
       padding: { top:45px; left:30px; right:30px; bottom:36px; }
       background-color: #da9;
     } // li
+    @import '../particle/event_content_list_particle';
   }// .event_particle
 
 }// .event_area
