--- a/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
+++ b/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* c_10_dom_tab_menu2.scss */
 #wrap {
   width: 100%;
@@ -106,20 +105,6 @@
 .event_area .event_particle {
   width: 100%;
   height: auto;
-  /*
-  <button type="button" data-import="../event/y21042_data.json" id="event_21042">
-  <h4 class="event_title">summer flaver</h4>
-  <p class="evetn_narration">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, beatae.</p>
-  <dl class="date">
-    <dt class="blind">기간</dt>
-    <dd>2122. 01. 05 - 2022. 02. 15</dd>
-  </dl>
-  <dl class="event_check success">
-    <dt>이벤트 진행 상태</dt>
-    <dd>이벤트 종료</dd>
-  </dl>
-  </button>
-  */
 }
 .event_area .event_particle > li {
   position: relative;
@@ -130,30 +115,45 @@
   height: 12.5rem;
   margin-bottom: 1.875rem;
   border-radius: 0.5rem;
-  padding-top: 45px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 36px;
-  background-color: #da9;
+  background-color: #da94;
 }
 .event_area .event_particle a {
   display: block;
   width: 100%;
   height: 100%;
-  transition: all 300ms ease;
-  text-align: left;
+  box-sizing: border-box;
+  padding-top: 2.8125rem;
+  padding-left: 3.5rem;
+  padding-right: 1.875rem;
+  padding-bottom: 2.25rem;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+  background-color: #da9;
+  transition: all 300ms ease;
+  text-align: left;
+  border-radius: 0.5rem;
 }
 .event_area .event_particle a h4 {
+  position: relative;
   width: 100%;
   height: auto;
   font-size: 36px;
   font-weight: 700;
   text-transform: capitalize;
   color: #ffffff;
-  text-shadow: 2px 2px 4px rgba(51, 51, 51, 0.7);
+  text-shadow: 0.125rem 0.125rem 0.25rem rgba(51, 51, 51, 0.7);
+}
+.event_area .event_particle a h4:before {
+  content: "";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 1rem;
+  margin-right: 1rem;
+  margin-left: -2rem;
+  background-color: #ffffff;
+  font-size: 4rem;
 }
 .event_area .event_particle a p {
   color: #ffffff;
@@ -193,6 +193,28 @@
   font-size: 22px;
   font-weight: 700;
   color: #ffffff;
+}
+.event_area .event_particle a:focus {
+  transform: scale(1.05);
+  background-color: #1a5d54;
+}
+.event_area .event_particle a:hover {
+  transform: scale(1.05);
+  background-color: #da9;
+}
+.event_area .event_particle .end a:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(51, 51, 51, 0.7);
+  border-radius: 0.5rem;
+}
+.event_area .event_particle .end a:hover {
+  transform: scale(1);
 }
 .event_area .event_particle .end .event_check:before {
   background-color: #c4c4c4;
