--- a/study_code/b_step_03/scss/particle/_event_content_list_particle.scss
+++ b/study_code/b_step_03/scss/particle/_event_content_list_particle.scss
@@ -1,53 +1,40 @@
 // event_content_list_particle.scss
 
 // @at-root .event_particle 내부에 작성되는 코드
-a {
-  display: block;
-  // display: flex; flex-direction: column; justify-content: flex-start;
-  width: 100%; height: 100%; transition: all 300ms ease;
-  text-align: left;
-  background: {
-    // image: url(#{$imgPath}#{$file});
-    repeat: no-repeat;
-    position:50% 50%;
-    size: cover;
+a {display: block;
+  width: 100%; height: 100%; box-sizing: border-box; 
+  padding: { top:2.8125rem; left:3.5rem; right:1.875rem; bottom:2.25rem; }
+  background: { repeat: no-repeat;  position:50% 50%; size: cover; color: #da9;}
+  transition:all 300ms ease; text-align: left; border-radius:0.5rem;
+
+  h4 {position: relative; width:100%; height:auto;  
+    font-size:map-get($map:$font_size, $key:title3 ); 
+    font-weight: 700; text-transform:capitalize; 
+    color:$color_white; text-shadow:0.125rem 0.125rem 0.25rem rgba($color_black_01, 0.7);
+    &:before{ content:""; display:inline-block; width: 1rem; height: 1rem; border-radius:1rem; margin-right: 1rem; margin-left: -2rem; background-color:$color_white; font-size:4rem; }
   }
-  h4 { width: 100%; height: auto;
-    font-size: map-get($map: $font_size, $key:title3 ); 
-    font-weight: 700; text-transform: capitalize; 
-    color: $color_white; text-shadow: 2px 2px 4px rgba($color_black_01, 0.7); }
-  p {color: $color_white; font-size: map-get($map: $font_size, $key:content1 ); margin: 0.4rem 0;}
-  .date {
-    > dd { color: $color_white; font-size: map-get($map: $font_size, $key:content1 );}
+  p { color:$color_white; font-size:map-get($map:$font_size, $key:content1); margin:0.4rem 0;}
+  .date{
+    >dd { color:$color_white; font-size:map-get($map:$font_size, $key:content1);  }
   }
-  .event_check{ $set_color: $color_white;
+  .event_check { $set_color:$color_white;
     position: absolute; top: 1rem; right: 1rem;
-    display: flex; align-items: center;
-    &:before { content: ""; display: block; width: 2rem; height: 2rem; background-color: $set_color; border-radius: 100%}
-    > dt { @include blind;}
-    > dd { margin-left: 0.5rem; font-size: map-get($map: $font_size, $key: content1); font-weight: 700; color: $set_color;}
+    display: flex; align-items:center;
+    &:before { content:""; display:  block; width:2rem; height: 2rem; background-color: $set_color; border-radius:100%;}
+    > dt {@include blind}
+    > dd {margin-left :0.5rem; font-size:map-get($map:$font_size, $key:content1); font-weight: 700; color:$set_color; }
   }
-
-} // a
-// a:hover { transform: scale(1.05); }
-
-.end .event_check { 
-  $set_color: $color_light_gray_01; 
-  &:before {background-color: $set_color;}
-  > dd { color: $set_color;}
+} 
+a:focus { transform:scale(1.05); background-color: $color_primary_01; }
+a:hover { transform:scale(1.05); background-color: #da9; }
+.end{
+  a:before{ content:""; display: block; 
+    position: absolute; top: 0; left: 0; width: 100%; height: 100%; 
+    background-color:rgba($color_black_01, 0.7); border-radius:0.5rem;}
+  a:hover{ transform: scale(1);}
+  .event_check{ 
+    $set_color: $color_light_gray_01; 
+    &:before {background-color: $set_color;}
+    > dd {color:$set_color;}
+  }
 }
-
-/*
-<button type="button" data-import="../event/y21042_data.json" id="event_21042">
-<h4 class="event_title">summer flaver</h4>
-<p class="evetn_narration">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, beatae.</p>
-<dl class="date">
-  <dt class="blind">기간</dt>
-  <dd>2122. 01. 05 - 2022. 02. 15</dd>
-</dl>
-<dl class="event_check success">
-  <dt>이벤트 진행 상태</dt>
-  <dd>이벤트 종료</dd>
-</dl>
-</button>
-*/
