--- a/study_code/b_step_03/css/src/c_11_dom_insert_data.css
+++ b/study_code/b_step_03/css/src/c_11_dom_insert_data.css
@@ -47,6 +47,7 @@
 #conBox > .card .bg_img {
   width: 100px;
   height: 100%;
+  background-color: #fff;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -63,7 +64,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 250px;
+  height: auto;
   font-size: 0.975rem;
   color: #757575;
 }
