--- a/study_code/b_step_03/scss/src/c_11_dom_insert_data.scss
+++ b/study_code/b_step_03/scss/src/c_11_dom_insert_data.scss
@@ -18,12 +18,13 @@
       width: 45%; height: 180px; margin: 0.5rem; border: $line2; padding: 0.5rem; background-color: $color_yellow_02;
     }
 
-    .bg_img { width: 100px; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;}
+    .bg_img { width: 100px; height: 100%; background-color: #fff;
+      background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;}
     dl { width: calc(100% - 110px); height: 100%; 
       dt { font-size: 1.2rem; font-weight: 700;}
       dd { 
         display: flex; flex-direction: column; 
-        width: 100%; height: 250px;
+        width: 100%; height: auto;
         font-size: 0.975rem; color: $color_light_gray_03; 
       }
       a { width: 140px; padding: 0.5rem 2rem; background-color: $color_primary_01; color: $color_white; font-weight: 700; text-align: center;}
