--- a/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
+++ b/study_code/b_step_03/css/src/c_10_dom_tab_menu2.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* c_10_dom_tab_menu2.scss */
 #wrap {
   width: 100%;
@@ -221,6 +222,98 @@
 }
 .event_area .event_particle .end .event_check > dd {
   color: #c4c4c4;
+}
+.event_modal {
+  display: none;
+  position: fixed;
+  z-index: 1500;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.event_modal.on {
+  display: block;
+}
+.modal_part {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  left: 50%;
+  margin: auto;
+  width: 80%;
+  min-width: 800px;
+  max-width: 1400px;
+  height: auto;
+  min-height: 400px;
+  max-height: 700px;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  box-shadow: 0.3rem 0.3rem 1rem rgba(51, 51, 51, 0.5);
+}
+.modal_part > h4 {
+  width: 100%;
+  height: auto;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #757575;
+  text-indent: 0.5rem;
+  color: #834c33;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.modal_part > h4:before {
+  content: "●";
+  color: #1a5d54;
+  margin-right: 0.5rem;
+  font-size: 0.7rem;
+}
+.modal_part .modal_particle {
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: auto;
+  min-height: 400px;
+  max-height: 600px;
+  background-color: #fda;
+}
+.modal_part .modal_particle .inner_sample {
+  width: 100%;
+  height: 2000px;
+  background-image: linear-gradient(30deg, #da7, #fc7);
+}
+.modal_part .modal_close {
+  position: absolute;
+  top: 0.7rem;
+  right: 1.3rem;
+  width: 2rem;
+  height: 2rem;
+}
+.modal_part .modal_close > button {
+  width: 100%;
+  height: 100%;
+  border-radius: 3rem;
+  color: #ffffff;
+  background-color: #1a5d54;
+  font-size: 0.75rem;
+}
+.modal_part .modal_close > button:hover {
+  background-color: #834c33;
+}
+.modal_part .modal_close > button:focus {
+  box-shadow: 0.3rem 0.3rem 0.3rem #aaaaaa;
+  border: 5px solid #aaaaaa;
+  box-sizing: content-box;
+}
+
+.modal_bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(51, 51, 51, 0.5);
 }
 
 #footBox {
