[modify] scss - css로 작성한 문서 scss로 변경중

--- a/study_code/a_project/scss/common/_mixin.scss
+++ b/study_code/a_project/scss/common/_mixin.scss
@@ -20,9 +20,9 @@
 }
 
 // image
-$imgPath:'../img/';
+$imgPath:'../../img/';
 
-@mixin img($file, $repeat:no-repeat, $position:50% 50%, $size:initial){
+@mixin img($file, $repeat:no-repeat, $position:50% 50%, $size:contain){
   background: {
     image: url(#{$imgPath}#{$file});
     repeat: $repeat;
