--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -1,148 +1,4 @@
 /* main_v2.css */
-/* reset.css */
-:root {
-  font-size: 16px;
-}
-
-html, body {
-  width: 100%;
-  height: 100%;
-  font-family: "apple GD", "noto sans KR", "noto sans KR", "IBM Plex Sans KR", sans-serif;
-  font-weight: 300;
-}
-
-html, body,
-h1, h2, h3, h4, h5, h6,
-p, pre, blockquote, address,
-ul, ol, li, dl, dt, dd,
-hr, button, img, div,
-header, article, nav, section, footer, aside,
-main, figure, figcaption, hgroup,
-form, fieldset, textarea, select {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  box-sizing: border-box;
-}
-
-ul, ol {
-  list-style: none;
-}
-
-hr {
-  width: 100%;
-  border: 0;
-  border-bottom: 0.0625rem solid #505050;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-button {
-  border: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border-radius: 0;
-}
-
-em, address, i {
-  font-style: normal;
-}
-
-abbr {
-  text-decoration: none;
-}
-
-table, tr, td, th, thead, tbody, tfoot {
-  border: 0.0625rem solid #757575;
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-select, input {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-
-input[type=text], input[type=password],
-input[type=tel], input[type=url],
-input[type=email], input[type=search] {
-  text-indent: 0.5rem;
-  cursor: pointer;
-}
-
-select, input, textarea {
-  cursor: pointer;
-}
-
-header, article, nav, section, footer, aside,
-main, figure, figcaption, hgroup {
-  display: block;
-}
-
-/* common.css */
-/* IR: image replace */
-.blind_wrap a > span,
-.blind_wrap button > span,
-.blind {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-
-.blind_wrap a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-.none {
-  display: none;
-}
-
-.clearfix {
-  width: 100%;
-  height: auto;
-}
-
-.clearfix:after, .clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-  width: 100%;
-  height: 0;
-}
-
-#wrap {
-  height: auto;
-  margin: auto;
-}
-
-.container {
-  width: 100%;
-  max-width: 1200px;
-  height: 100%;
-  margin: auto;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  background-color: #ddd;
-}
-
 html, body {
   color: #171717;
 }
@@ -155,19 +11,22 @@ html, body {
 #headBox {
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 100;
+  display: flex;
+  justify-content: space-between;
   width: 1280px;
   height: 150px;
   padding: 30px 100px;
   background-color: rgba(255, 255, 255, 0.8);
 }
-#headBox h1 {
-  float: left;
+h1 {
   width: 170px;
   height: 60px;
   margin-top: 30px;
 }
-#headBox h1 a {
+h1 a {
   display: block;
   width: 100%;
   height: 100%;
@@ -176,7 +35,7 @@ html, body {
   background-position: 50% 50%;
   background-size: contain;
 }
-#headBox h1 a > span {
+h1 a > span {
   display: block;
   position: absolute;
   z-index: -1;
@@ -185,49 +44,50 @@ html, body {
   height: 0;
   overflow: hidden;
 }
-#gnb {
-  display: flex;
-  justify-content: space-between;
+
+#gnb ul {
   position: absolute;
   left: 0;
   right: 0;
-  float: left;
+  display: flex;
+  justify-content: space-between;
   width: 500px;
   height: 40px;
   margin: auto;
   margin-top: 50px;
 }
-#gnb li {
+#gnb ul li {
   width: auto;
-  font-size: 18px;
   text-align: center;
   line-height: 40px;
+  font-size: 18px;
 }
 
-#unb {
-  float: right;
+.unb {
   width: 300px;
   height: auto;
 }
-#unb .unb_btn {
+.unb_btn {
   display: flex;
   justify-content: space-between;
-  float: left;
   width: auto;
   height: 30px;
   margin: auto;
+  margin-left: 40px;
   margin-bottom: 20px;
 }
-#unb .unb_btn > li {
+.unb_btn li {
   position: relative;
+  display: block;
   width: auto;
   height: auto;
+  margin-right: 5px;
+  padding-right: 5px;
   font-size: 16px;
-  font-weight: 400;
   text-align: center;
   line-height: 20px;
 }
-#unb .unb_btn > li::after {
+.unb_btn li::after {
   content: "";
   display: block;
   position: absolute;
@@ -237,8 +97,93 @@ html, body {
   height: 15px;
   background-color: #999;
 }
-#unb .unb_btn > li:last-child::after {
+.unb_btn li:last-child::after {
   display: none;
+}
+.unb_btn .language_img {
+  display: block;
+  width: 30px;
+  height: 20px;
+  margin-left: 30px;
+  background-image: url(../../img/global_1.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+.unb_btn .language_img > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+.unb_btn .unb_language span {
+  display: none;
+  margin: 0;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.unb_btn .unb_language:hover span {
+  display: block;
+}
+.unb_btn .unb_language:focus span {
+  display: block;
+}
+.unb_btn .unb_btn a {
+  display: block;
+  text-align: center;
+}
+.unb_btn .unb_sign {
+  color: #E13100;
+}
+
+.unb_search_area {
+  width: 200px;
+  height: 30px;
+  margin-left: 100px;
+}
+.user_search {
+  position: relative;
+  width: 160px;
+  height: 30px;
+  margin: auto;
+  margin-right: 10px;
+  border-radius: 15px;
+  background-color: #ebebeb;
+}
+.user_search #search_bar {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  text-indent: 8px;
+}
+.user_search .unb_search_icon {
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+}
+.user_search .unb_search_icon button {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin-top: 4px;
+  background-image: url(../../img/search.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+.user_search .unb_search_icon button > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=main_v2.css.map */
