--- a/study_code/a_project/scss/common/_mixin.scss
+++ b/study_code/a_project/scss/common/_mixin.scss
@@ -1,23 +1,7 @@
 // mixin.scss
 @use "sass:math"; 
 
-// font-set
-@mixin font_set (){
-  font-family:$font_family_en,  $font_family_kr,  $font_family_common; 
-}
-
-@mixin text_option($size:title3, $weight:4, $line:false){ 
-  font-size:map-get($map:$font_size, $key: $size);
-  font-weight:nth($font_weight,$weight);
-  @if $line {
-    line-height:24px;
-    letter-spacing:-0.006em;    
-  }
-}
-
-@mixin effect_shadow_01 {
-	box-shadow:0px 4px 4px rgba(0,0,0,0.25);
-}
+$baseSize: 16;
 
 // image
 $imgPath:'../../img/';
@@ -46,6 +30,30 @@ $imgPath:'../../img/';
   }
 }
 
+// font-set
+@mixin font_set (){
+  font-family:$font_family_en,  $font_family_kr,  $font_family_common; 
+}
+
+
+// =======================================================================================
+
+
+
+@mixin text_option($size:title3, $weight:4, $line:false){ 
+  font-size:map-get($map:$font_size, $key: $size);
+  font-weight:nth($font_weight,$weight);
+  @if $line {
+    line-height:24px;
+    letter-spacing:-0.006em;    
+  }
+}
+
+@mixin effect_shadow_01 {
+	box-shadow:0px 4px 4px rgba(0,0,0,0.25);
+}
+
+
 // blind
 @mixin blind(){
   display: block; width: 0; height: 0;
@@ -53,7 +61,6 @@ $imgPath:'../../img/';
   clip:rect(0,0,0,0);
   overflow: hidden;
 }
-
 
 
 // unit
